--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Whats the Weather</title>
 </head>
+
 <body>
-    
+
+    <h1> Weather Dashboard</h1>
+
+    <div class="card">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-sm-3">
+                    <form class="form-inline">
+                        <h2>Search your city</h2>
+                        <input id="search" class="form-control mr-sm-2" type="search" placeholder="Location" aria-label="Search">
+                        <button class="btn"><i class="fas fa-search"></i></button>
+                    </form>
+                </div>
+                <div class="col-md-9">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="weather">
+                                <ul>
+                                    <div id="city"></div>
+                                    <div id="temp"></div>
+                                    <div id="humidity"></div>
+                                    <div id="wind"></div>
+                                    <div id="uvIndex"></div>
+                                <!-- weather information from search goes here -->
+                                </ul>
+                                <div id="weatherBox"><h2>5 Day Forecast: </h2>
+                                    <!-- weather boxes go here -->
+                                </div>
+                                
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
@@ -16,4 +56,5 @@
     <script src="https://kit.fontawesome.com/1b8fabd2b1.js" crossorigin="anonymous"></script>
     <script src="javascript.js"></script>
 </body>
+
 </html>
