getting the current weather data to display.

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                         <div class="card-body">
                             <div class="weather">
                                 <ul>
-                                    <div id="city"></div>
-                                    <div id="temp"></div>
-                                    <div id="humidity"></div>
-                                    <div id="wind"></div>
-                                    <div id="uvIndex"></div>
+                                    <li id="city" class="clear"></li>
+                                    <li id="temp"  class="clear"></li>
+                                    <li id="humidity"  class="clear"></li>
+                                    <li id="wind"  class="clear"></li>
+                                    <li id="uvIndex" class="clear"></li>
                                 <!-- weather information from search goes here -->
                                 </ul>
                                 <div id="weatherBox"><h2>5 Day Forecast: </h2>
