--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="card-body">
                             <div class="weather">
                                 <ul>
-                                    <div id="city" class="clear"></div>
+                                    <h3 id="city" class="clear"></h3>
                                     <div id="temp"  class="clear"></div>
                                     <div id="humidity"  class="clear"></div>
                                     <div id="wind"  class="clear"></div>
